styling.css
:root {
    --background-color: rgb(10,14,8); 
}
html {
    background-color: var(--background-color);
}
html, body {
    height: 100%;
    margin: 0;
    overflow: hidden; /* Prevent scrolling on the root level */
    }
.background{
    background-image: url('images/dark_leaves_portrait.jpeg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    width:100%;
    height: 100%;
    position:fixed;
    background-color: rgb(10,14,8);
    filter: blur(1px) saturate(100%) brightness(50%);
    z-index: -1;
    position:fixed;
    top: 0;
    left: 0;
}
.content{
    display: flex;
    height: 100%;
    width:auto;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: auto; 
    margin-top: 2.2rem;
    z-index: 999;
    position:relative;
}
body * {
    color: white;
    text-shadow: 0.5px 0 0 black, -0.5px 0 0 black, 0 0.5px 0 black, 0 -0.5px 0 black, 0.5px 0.5px black, -0.5px -0.5px 0 black, 0.5px -0.5px 0 black, -0.5px 0.5px 0 black;
}
header{
    display: flex;
    flex-direction: column;
    align-items: center;  /* This will ensure the children (links and socials) are centered */
    text-decoration: none;
    gap:1.8em;
}
header img {
    display:block;
    width:120px;
    height:auto;
    border-radius: 50%;
}
header a {
    font-size: 1.2rem;
}
.icon
{
    display:flex;
    justify-content: space-evenly;
    font-size: 8vw;  
    gap: 1.5rem; 
}
.icon a{
    opacity:.8;
}
.icon a:hover{
    opacity:1;
}
.socials {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
    grid-gap: 6vw; 
    max-width: 60vw;
    justify-content: center;
    align-items: center;
    margin: 1.5em;
}
.links
{
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap:2em; 
    margin:2em; 
}
a
{
    text-decoration: none;
    font-size:8vw;
}
.button {
    display: flex;
    padding: 10px; /* Increase horizontal padding, and maintain vertical padding */
    border: none; 
    background-color: rgba(255, 255, 255, 0.2); 
    backdrop-filter: blur(7px); 
    -webkit-backdrop-filter: blur(7px); /* For Safari */
    width: 85vw;/* It will take as much width as the content requires */
    transition: box-shadow 0.3s ease-in-out; /* Add transition for smooth effect */
    justify-content: flex-start; 
    align-items: center;
    position: relative; 
    border-radius: 10px;
    font-size: 1.8rem; /* Adjust according to your needs. 1rem is just an example. */
}
.button:hover {
    transform: scale(1.04);
    transition: transform .3s ease;
    box-shadow: 0px 10px 15px 10px rgba(255,255,255,0.7);  /* Add shadow on hover */
}
.button-image {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    background-color: #000;
    margin-right: 5px; 
    opacity:1;
}
.button-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%; /* To keep rounded corners */
    opacity:1;
}
.button-text {
    text-align: center;
    padding: 0 3px; /* Just in case you want some space around the text inside its container */
}
.button-text {
    flex-grow: 1; /* Allow it to take up remaining space */
    text-align: center; /* Center-align the text within its space */
}
/* CSS for screens wider than 768px */
@media (min-width: 768px) {
    .icon {
        font-size: 5vw;  
    }
    a {
        font-size: 4vw;
    }
    .button {
        width: 50vw;
    }
}
footer {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    align-items: center;
    margin:2vw;
    
}

